[package]
name = "rivenclaw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rivenclaw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rstest = "0.22"
